Some more cleanup.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -289,11 +289,15 @@ elseif(APPLE)
     XCODE_ATTRIBUTE_INFOPLIST_PREFIX_HEADER "${SM_XCODE_DIR}/plistHelper.hpp"
     XCODE_ATTRIBUTE_GCC_PREFIX_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/archutils/Darwin/StepMania.pch"
     XCODE_ATTRIBUTE_GCC_ENABLE_CPP_EXCEPTIONS "NO"
-    XCODE_ATTRIBUTE_LIBRARY_SEARCH_PATHS "${SM_XCODE_DIR}/ffmpeg/lib ${SM_XCODE_DIR}/Libraries"
+    XCODE_ATTRIBUTE_LIBRARY_SEARCH_PATHS "${SM_XCODE_DIR}/Libraries"
     XCODE_ATTRIBUTE_OTHER_LDFLAGS "-lbz2 -liconv"
   )
+  # AATRIBUTE_LIBRARY_SEARCH_PATHS ${SM_XCODE_DIR}/ffmpeg/lib 
 
   sm_add_compile_definition("${SM_EXE_NAME}" _XOPEN_SOURCE)
+  if (${HAS_FFMPEG})
+    sm_add_compile_definition("${SM_EXE_NAME}" HAVE_FFMPEG)
+  endif()
   
   if (CMAKE_BUILD_TYPE EQUAL "Debug")
     set(SM_APP_RELEASE_NAME "${SM_NAME_DEBUG}")
@@ -494,14 +498,16 @@ elseif(APPLE)
     "glew"
     "pcre"
     "jpeg"
-    "avcodec"
-    "avdevice"
-    "avfilter"
-    "avformat"
-    "avutil"
-    "swresample"
-    "swscale"
   )
+  # lost out on avfilter, swresample, and swscale
+  if (HAS_FFMPEG)
+    list(APPEND SMDATA_LINK_LIB
+      "${SM_FFMPEG_ROOT}/libavformat/libavformat.a"
+      "${SM_FFMPEG_ROOT}/libavcodec/libavcodec.a"
+      "${SM_FFMPEG_ROOT}/libswscale/libswscale.a"
+      "${SM_FFMPEG_ROOT}/libavutil/libavutil.a"
+    )
+  endif()
 else() # Unix / Linux
   # TODO: Remember to find and locate the zip archive files.
   sm_list_replace(SMDATA_LINK_LIB 8 "${JPEG_LIBRARY}")
@@ -645,7 +651,7 @@ if(NOT APPLE)
   endif()
 else()
   list(APPEND SM_INCLUDE_DIRS
-    "${SM_XCODE_DIR}/ffmpeg/include"
+    "${SM_EXTERN_DIR}/ffmpeg-git"
     "archutils/Unix"
   )
 endif()
