DO NOT MERGE! Consistent main not ready yet.
If this is used instead of Mac's SMMain.mm, the following problems take place:

* No loading window.
* An unresponsive menu bar in the top of the screen (where all menu bars live on Mac OS X).
* A forever bouncing StepMania icon, as if it's not done loading.
* A lack of closing buttons.
* A lack of title in the normal window title position.

...at least the keyboard worked?

......this is something I would like to see merged in, but it's not ready yet. I think the rest of the code has to use SDL2 first.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,7 @@ list(APPEND SMDATA_ALL_FILES_HPP
   ${SMDATA_FILE_TYPES_HPP}
 )
 
-if(NOT APPLE)
+if(SDL2_FOUND OR NOT APPLE)
   list(APPEND SMDATA_ALL_FILES_SRC "Main.cpp")
   source_group("" FILES "Main.cpp")
 endif()
